--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -16,7 +16,6 @@
     </div>
     <div class="infoFull">
       <div class="row name">
-        <div class="col base">Name:</div>
         <div class="col value">Shyamal Guchhait</div>
       </div>
       <div class="edu">
@@ -37,7 +36,6 @@
           <div class="time">July 2016 - June 2019</div>
           <div class="degree">Master of Science (Physics)</div>
           <div class="department">Department of physical sciences.</div>
-          <div class="marks">Overall CGPA: 8.87</div>
         </div>
         <div class="school">
           <div class="schoolName">
@@ -48,11 +46,10 @@
           <div class="department">Department of physical sciences.</div>
         </div>
         <div class="school">
-          <div class="schoolName">Panskura Banamali College , Panskura</div>
+          <div class="schoolName">Vidyasagar University, Medinipur (Panskura Banamali College)</div>
           <div class="time">July 2013 - June 2016</div>
-          <div class="degree">Bachelor of Science</div>
+          <div class="degree">Bachelor of Science (Physics (H))</div>
           <div class="department">Department of physical sciences.</div>
-          <div class="marks">Overall Percentage: 76</div>
         </div>
       </div>
       <div class="personal">
@@ -73,7 +70,7 @@
           </div>
           <div class="row">
             <div class="col base">Knowing Languages</div>
-            <div class="col value">Bengai(M)</div>
+            <div class="col value">Bengai(M), English, Hindi</div>
           </div>
           <div class="row">
             <div class="col base">Address (Current)</div>
