--- a/src/app/components/research/research.component.html
+++ b/src/app/components/research/research.component.html
@@ -5,73 +5,118 @@
       <hr />
       <div class="value">
         <ul class="list-group">
-          <li class="list-group-item" id="1st">Hybridize meta-surface</li>
+          <li class="list-group-item" id="1st">etamaterials, metasurface, hybridized optical system.</li>
           <li class="list-group-item" id="2nd">
-            Spin orbit interaction of light & spin hall effect of light.
+            Nano-optics/ Nanophotonics.
           </li>
           <li class="list-group-item" id="3rd">
-            Spin orbit interaction in random medium
+            Polarization optics.
+            <ul>
+              <li>Spin-orbit interaction of light.</li>
+              <li>Weak measurement.</li>
+            </ul>
           </li>
+          <li class="list-group-item" id="4th">Computation optics</li>
         </ul>
       </div>
     </div>
     <div class="tech">
-      TECHNICAL STRENGTHS
+      SKILLS
       <hr />
       <div class="value">
         <div class="row">
-          <div class="col">Working Skill</div>
+          <div class="col">Experimental Skills</div>
           <div class="col" id="4th">
+            Handled various laser sources, spectrometers, imaging cameras, optical,
+            optomechanical, and optoelectronic components and devices.
             Electron Beam Lithography, Scanning Electron Microscope
           </div>
         </div>
         <div class="row">
-          <div class="col">Modeling & Analysis</div>
+          <div class="col">Programming Skills </div>
           <div class="col" id="5th">
-            COMSOL, CST Studio Suite , Blender, Inkscape
+            COMSOL, Lumerical, CST, Fortran, C, C++, Python, MATLAB, Julia.
+            The automation of optical experimental systems using MATLAB, Python
           </div>
         </div>
         <div class="row">
-          <div class="col">Software & Tools</div>
+          <div class="col">TeX</div>
           <div class="col" id="6th">
-            C, Python, MATLAB, Julia, MS Office, LaTeX
+            MS Office, LATEX
           </div>
         </div>
       </div>
     </div>
     <div class="extra">
-      EXTRA-CIRRUCULAR
+      EXTRA-CURRICULAR (BASIC KNOWLEDGE)
       <hr />
       <div class="value">
-        <ul class="list-group">
-          <li class="list-group-item" id="check">
-            Basic knowledge of client side language
-            <span> (HTML, CSS, SASS, JAVASCRIPT, TYPESCRIPT), </span>
-            server side programming
-            <span> (Node.js, PHP, Flask, Django), </span> data serve
-            language<span> (SQL, MYSQL, MONGODB), </span> JS framework/library
-            <span> (Angular, React, JQuery, Netx.js) </span>
-          </li>
-          <li class="list-group-item" id="8th">
-            Basic knowledge of Kdenlive (Videoediting software), Audacity (Audio
-            editing software)
-          </li>
-        </ul>
+        <div class="row">
+          <div class="col">Web development client software</div>
+          <div class="col">HTML, CSS, JavaScript, TypeScrip</div>
+        </div>
+        <div class="row">
+          <div class="col">Web development server software </div>
+          <div class="col">PHP, Flask, Django, Sass</div>
+        </div>
+        <div class="row">
+          <div class="col">JavaScript Framework</div>
+          <div class="col">jQuery, Node.js, React, Next.js, Angular</div>
+        </div>
+        <div class="row">
+          <div class="col">Web development database</div>
+          <div class="col">SQL, SQLite, MySQL, PostgreSQL, MongoDB</div>
+        </div>
+        <div class="row">
+          <div class="col">Web server</div>
+          <div class="col">Apache HTTP Server</div>
+        </div>
+        <div class="row">
+          <div class="col">Video editing software </div>
+          <div class="col">Kdenlive, Blender, Lightworks, OpenShot, Shotcut</div>
+        </div>
+        <div class="row">
+          <div class="col">Audio edition software</div>
+          <div class="col">Audacity</div>
+        </div>
+        <div class="row">
+          <div class="col">Raster photo editing software</div>
+          <div class="col">GIMP, Adobe Photoshop</div>
+        </div>
+        <div class="row">
+          <div class="col">Vector photo editing software</div>
+          <div class="col">nkscape, Adobe Illustrator</div>
+        </div>
+        <div class="row">
+          <div class="col">3d drawing & Animation software </div>
+          <div class="col">Blender</div>
+        </div>
+        <div class="row">
+          <div class="col">2d Animation software</div>
+          <div class="col">Pencil2D</div>
+        </div>
+        <div class="row">
+          <div class="col">Web hosting </div>
+          <div class="col">WordPress, DNS Server, CPanel</div>
+        </div>
+        <div class="row">
+          <div class="col">Operating system (OS)</div>
+          <div class="col">Linux, Windows</div>
+        </div>
       </div>
-    </div>
-    <div class="teach">
-      TEACHING EXPERIENCE
-      <hr />
-      <div class="value">
-        <ul class="list-group">
-          <li class="list-group-item" id="9th">
-            Physics Laboratory III (Teaching assistance)
-          </li>
-          <li class="list-group-item" id="10th">
-            Electronics Lab (Teaching assistance)
-          </li>
-        </ul>
+      <div class="teach">
+        TEACHING EXPERIENCE
+        <hr />
+        <div class="value">
+          <ul class="list-group">
+            <li class="list-group-item" id="9th">
+              Physics Laboratory III (Teaching assistance)
+            </li>
+            <li class="list-group-item" id="10th">
+              Electronics Lab (Teaching assistance)
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
   </div>
-</div>
