--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -64,7 +64,7 @@
             }
 
             .value {
-                text-align: left;
+                text-align: center;
             }
         }
 
