--- a/src/app/components/research/research.component.html
+++ b/src/app/components/research/research.component.html
@@ -5,7 +5,7 @@
       <hr />
       <div class="value">
         <ul class="list-group">
-          <li class="list-group-item" id="1st">etamaterials, metasurface, hybridized optical system.</li>
+          <li class="list-group-item" id="1st">Metamaterials, metasurface, hybridized optical system.</li>
           <li class="list-group-item" id="2nd">
             Nano-optics/ Nanophotonics.
           </li>
